# BookManager

./: .gitignore  .gitmodules  ArtBook.h  Book.cpp  Book.h  BookCreationResponbility.cpp  BookCreationResponsibility.h  BookFactory.cpp  BookFactory.h  BookStatus.h  CMakeLists.txt  Category.h  Category.hpp  Comics.h  DrawBook.cpp  DrawBook.h  Editor.h  MaillonCreationBookArtBook.cpp  MaillonCreationBookArtBook.h  MaillonCreationBookComics.cpp  MaillonCreationBookComics.h  MaillonCreationBookManga.cpp  MaillonCreationBookManga.h  MaillonCreationBookNovel.cpp  MaillonCreationBookNovel.h  Manga.h  Novel.h  Person.h  Person.hpp  Publisher.h  Publisher.hpp  README.md  Role.h  ToDo.txt  Utils.cpp  Utils.h  main.cpp
Book/: ArtBook.hpp  CMakeLists.txt  Comics.hpp  Manga.hpp  Novel.cpp  Novel.hpp
Book/Abstract/: Book.cpp  Book.hpp  CMakeLists.txt  DrawBook.cpp  DrawBook.hpp
Book/BookAbstract/: CMakeLists.txt
Book/BookAbstract/include/BookAbstract/: Book.hpp  DrawBook.hpp
Book/BookAbstract/src/: Book.cpp  DrawBook.cpp
Book/BookEnum/: CMakeLists.txt
Book/BookEnum/include/BookEnum/: BookStatus.hpp  BookType.hpp
Book/BookFactory/: CMakeLists.txt
Book/BookFactory/include/BookFactory/: BookFactory.hpp
Book/BookFactory/src/: BookFactory.cpp
Book/BookTypes/: CMakeLists.txt
Book/BookTypes/include/BookTypes/: ArtBook.hpp  Comics.hpp  Manga.hpp  Novel.hpp
Book/BookTypes/src/: Novel.cpp
Book/Enum/: BookStatus.hpp  CMakeLists.txt
Book/Factory/: BookFactory.cpp  BookFactory.hpp  CMakeLists.txt
Entity/: CMakeLists.txt  Person.hpp  Publisher.hpp
Entity/EntityEnum/: CMakeLists.txt
Entity/EntityEnum/include/EntityEnum/: Role.hpp
Entity/EntityTypes/: CMakeLists.txt
Entity/EntityTypes/include/EntityTypes/: BookSerie.hpp  BookSeries.hpp  Person.hpp  Publisher.hpp
Entity/Enum/: CMakeLists.txt
GraphicalInterface/: CMakeLists.txt
GraphicalInterface/Models/: CMakeLists.txt
GraphicalInterface/Models/include/Models/: BookSeriesModel.hpp  CategoryModel.hpp  PersonModel.hpp
GraphicalInterface/Models/src/: BookSeriesModel.cpp  CategoryModel.cpp  PersonModel.cpp
GraphicalInterface/Models/ut/: BookSeriesModelUT.cpp  CMakeLists.txt  CategoryModelUT.cpp  PersonModelUT.cpp
GraphicalInterface/View/: CMakeLists.txt  resource.qrc
GraphicalInterface/View/Popup/: CMakeLists.txt
GraphicalInterface/View/Popup/include/Popup/: AuthorDialog.hpp  BookSeriesDialog.hpp  CategoryDialog.hpp  SettingsDialog.hpp
GraphicalInterface/View/Popup/src/: AuthorDialog.cpp  BookSeriesDialog.cpp  CategoryDialog.cpp  SettingsDialog.cpp
GraphicalInterface/View/include/View/: BookPage.hpp  BookSeriesPage.hpp  CategoryPage.hpp  MainWindow.hpp  PersonPage.hpp
GraphicalInterface/View/src/: BookPage.cpp  BookSeriesPage.cpp  CategoryPage.cpp  MainWindow.cpp  PersonPage.cpp
GraphicalInterface/include/GraphicalInterface/: BookPage.hpp  MainWindow.hpp
GraphicalInterface/src/: MainWindow.cpp
Lib/: CMakeLists.txt
MaillonCreation/: BookCreationResponsibility.cpp  BookCreationResponsibility.hpp  CMakeLists.txt  MaillonCreationBookArtBook.hpp  MaillonCreationBookComics.hpp  MaillonCreationBookManga.hpp  MaillonCreationBookNovel.hpp
MaillonCreation/include/MaillonCreation/: BookCreationResponsibility.hpp  MaillonCreationBookArtBook.hpp  MaillonCreationBookComics.hpp  MaillonCreationBookManga.hpp  MaillonCreationBookNovel.hpp
MaillonCreation/src/: BookCreationResponsibility.cpp
Managers/: CMakeLists.txt  Manager.cpp  Manager.hpp
Managers/include/Managers/: DataBaseManager.hpp  DatabaseManager.hpp  GeneralManager.hpp  Manager.hpp  OptionManager.hpp  SettingsManager.hpp
Managers/include/Managers/Utils/: QueryBuilder.hpp  SettingsEnum.hpp  SettingsTypes.hpp  SortingEnum.hpp  TableDelete.hpp  TableDeserializers.hpp  TableInsert.hpp  TableModifier.hpp  TableUpdater.hpp
Managers/include/Managers/Utils/SqlOperator/: InterfaceOperator.hpp  MacroSqlOperator.hpp  WhereOperator.hpp
Managers/include/Managers/Utils/SqlOperator/Comparison/: ComparisonOperator.hpp  GreaterOrEqualOperator.hpp  GreaterThanOperator.hpp  InterfaceComparisonOperator.hpp  IsNotOperator.hpp  IsOperator.hpp  LessOrEqualOperator.hpp  LessThanOperator.hpp  LikeOperator.hpp
Managers/include/Managers/Utils/SqlOperator/Logical/: AndOperator.hpp  BetweenOperator.hpp  InOperator.hpp  InterfaceLogicalOperator.hpp  LogicalOperator copy.hpp  LogicalOperator.hpp  NotOperator.hpp  OrOperator.hpp
Managers/src/: DataBaseManager.cpp  DatabaseManager.cpp  GeneralManager.cpp  Manager.cpp  OptionManager.cpp  SettingsManager.cpp
Managers/src/Utils/: QueryBuilder.cpp  SettingsTypes.cpp  TableDelete.cpp  TableDeserializers.cpp  TableInsert.cpp  TableModifier.cpp  TableUpdater.cpp
Managers/src/Utils/SqlOperator/: WhereOperator.cpp
Managers/ut/: CMakeLists.txt  DatabaseManagerBookUT.cpp  DatabaseManagerUT.cpp  DatabaseManagerUT_Common.hpp  QueryBuilderUT.cpp  SettingsManagerUT.cpp  SqlOperatorUT.cpp  TableDeleteUT.cpp  TableDeserializersBookUT.cpp  TableDeserializersUT.cpp  TableDeserializersUT_Common.hpp  TableInsertUT.cpp  TableUpdaterUT.cpp
Managers/ut/Utils/: DatabaseManagerTestCommon.hpp  TableDeserializerUtils.hpp
Utils/: CMakeLists.txt  Utils.cpp
Utils/include/Utils/: DeleteFunctions.hpp  EnumUtils.hpp  Exceptions.hpp  ILogger.hpp  Log.hpp  Loggers.hpp  Singleton.hpp  StringUtils.hpp  TestUtils.hpp
Utils/src/: EnumUtils.cpp  Loggers.cpp  StringUtils.cpp  TestUtils.cpp
Utils/ut/: CMakeLists.txt  LoggersUT.cpp
